methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:10: error: not enough arguments for method peindre: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  peindre();avance();gauche();avance();peindre();recule();recule();peindre();avance();droite();recule();
         ^MethodsPicture:10: error: not enough arguments for method peindre: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  peindre();avance();gauche();avance();peindre();recule();recule();peindre();avance();droite();recule();
                                              ^MethodsPicture:10: error: not enough arguments for method peindre: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  peindre();avance();gauche();avance();peindre();recule();recule();peindre();avance();droite();recule();
                                                                          ^