methods.picture.MethodsPicture.scala.code
override def run() {

def peindre(c:Color) {
  setCouleurBrosse(c);
  baisseBrosse();
  leveBrosse();
}
  
def faireV(c:Color) {
  peindre();avance();gauche();avance();peindre();recule();recule();peindre();avance();droite();recule();
  
}
  
  
  
}